Continue work on proposal

--- a/papers/proposal.bib
+++ b/papers/proposal.bib
@@ -1,9 +1,7 @@
-
-
 @misc{ grey-ada,
 author={ALLYSON JEFFS,Calgary H.},
-year={1992/05/20/},
-month={1992 May 20},
+year={1992},
+month={5},
 title={Access for disabled costly, say bus lines: [Final Edition]},
 journal={Edmonton Journal},
 pages={A8},
@@ -15,3 +13,26 @@ language={English},
 url={https://ezproxy.library.wwu.edu/login?url=https://www.proquest.com/newspapers/access-disabled-costly-say-bus-lines/docview/250571090/se-2},
 }
 
+@inproceedings{lime,
+  author    = {Marco Tulio Ribeiro and
+               Sameer Singh and
+               Carlos Guestrin},
+  title     = {"Why Should {I} Trust You?": Explaining the Predictions of Any Classifier},
+  booktitle = {Proceedings of the 22nd {ACM} {SIGKDD} International Conference on
+               Knowledge Discovery and Data Mining, San Francisco, CA, USA, August
+               13-17, 2016},
+  pages     = {1135--1144},
+  year      = {2016},
+}
+
+@article{alibi,
+author = {Klaise, Janis and Van Looveren, Arnaud and Vacanti, Giovanni and Coca, Alexandru},
+journal = {Journal of Machine Learning Research},
+month = jun,
+number = {181},
+pages = {1--7},
+title = {{Alibi Explain: Algorithms for Explaining Machine Learning Models}},
+url = {http://jmlr.org/papers/v22/21-0017.html},
+volume = {22},
+year = {2021}
+}
