Add Progress report from 6/4

--- a/papers/progress.tex
+++ b/papers/progress.tex
@@ -29,10 +29,35 @@
 \end{itemize}
 \section{Raghav's Progress}
 \subsection{Accomplishments}
+\begin{itemize}
+    \item Explored methods for data analysis
+    \item Wrote a script that creates a sentiment visual given a model and a sample of text
+\end{itemize}
 \subsection{Tasklist}
+\begin{itemize}
+    \item Explore multidiciplinary aspects to enrich analysis in report
+    \item Become more familiar with model interpretability libraries
+\end{itemize}
 \subsection{Challenges}
+\begin{itemize}
+    \item Learning in-situ.
+    \item Lack of experience with technical methods.
+\end{itemize}
 \section{Brady's Progress}
 \subsection{Accomplishments}
+\begin{itemize}
+    \item Downloaded data
+    \item Started exploring TensorFlow and Keras
+\end{itemize}
 \subsection{Tasklist}
+\begin{itemize}
+    \item Continue exploring TensorFlow and Keras
+    \item Replicate a SoTA sentiment analysis model in TensorFlow
+    \item Potentially transition to VADER for sentiment analysis
+\end{itemize}
 \subsection{Challenges}
+\begin{itemize}
+    \item Learning in-situ.
+    \item Lack of experience with machine learning.
+\end{itemize}
 \end{document}
