Continue work on report

--- a/papers/report/acl2020.sty
+++ b/papers/report/acl2020.sty
@@ -452,8 +452,8 @@
 \newcommand\newcite{\citet}	% to get "Author (Year)" with natbib    
 
 % DK/IV: Workaround for annoying hyperref pagewrap bug 
-\RequirePackage{etoolbox}
-\patchcmd\@combinedblfloats{\box\@outputbox}{\unvbox\@outputbox}{}{\errmessage{\noexpand patch failed}}
+% \RequirePackage{etoolbox}
+% \patchcmd\@combinedblfloats{\box\@outputbox}{\unvbox\@outputbox}{}{\errmessage{\noexpand patch failed}}
 
 % bibliography
 
