Fix typo in report

--- a/papers/report/report.tex
+++ b/papers/report/report.tex
@@ -78,7 +78,7 @@ The word vectorization model used was the FastText model from the \texttt{Gensim
 Another such visual representation of the data after pre-processing was a word cloud generated using the \texttt{WordCloud} library and \texttt{matplotlib}. The word cloud was then generated using word frequencies to set the size of each word.
 
 \subsection{Sentiment Analysis}
-\textbf{BRADY}: In this part of the project, we used the Valence Aware Dictionary and sEntiment Reasoner or \textbf{VADER} and the LSTM model of TensorFlow Keras, a machine learning tool created by Google to generate and visualize data flow. In this case, we used TensorFlow Keras to train a sentiment analysis model similar to the one proposed in this paper. Once the sentiment scores for each document are calculated and the model is built, the data is trained and fit to the model. The average accuracy of this model was shown to be $82.5$\%. For the 2010s decade, we took this model and then used it to predict from the training data the sentiment of the entire decade. The result was that the overall sentiment of disability in the 2010s was positive. We plan to continue building upon the sentiment analysis model and having TensorFlow be able to cover all the decades and their sentiment.
+\textbf{BRADY}: In this part of the project, we used the Valence Aware Dictionary and Sentiment Reasoner or \textbf{VADER} and the LSTM model of TensorFlow Keras, a machine learning tool created by Google to generate and visualize data flow. In this case, we used TensorFlow Keras to train a sentiment analysis model similar to the one proposed in this paper. Once the sentiment scores for each document are calculated and the model is built, the data is trained and fit to the model. The average accuracy of this model was shown to be $82.5$\%. For the 2010s decade, we took this model and then used it to predict from the training data the sentiment of the entire decade. The result was that the overall sentiment of disability in the 2010s was positive. We plan to continue building upon the sentiment analysis model and having TensorFlow be able to cover all the decades and their sentiment.
 
 \subsection{Interpretable Sentiment Analysis}
 We chose the Alibi library and the integrated gradients method to create interpretations. Integrated grardietns define and attribution value foro each word in the input. Attributions are calcuclated using the integral of hte model gradients with respect ot he word embedding layer along a straight path from a base line instance to the input instance. To do othis, we take the model, a sambple of the data, and an index of words to compare frequencies and setiment against. We use this to create a visualization. The visualiation is based on the what has the highest positive attribution. Words with high positive attribution are highlighted in shades of green and words with negative attributions in shades of pink. Positive attributions can be interpreted as increase in probability of the predicted class (``positive sentiment'') while negative attributions correspond to decrease probability of the predicted class.
